--- a/augment.ipynb
+++ b/augment.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,14 +12,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(14289, 15)"
             ]
           },
+          "execution_count": 20,
           "metadata": {},
-          "execution_count": 20
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -48,18 +34,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "filtered_data=[]\n",
-        "texts = df['action'].unique()\n",
-        "texts.shape\n",
-        "csv_file_path = '/content/noduplicates_nlpositionality_social-acceptability_processed.csv'\n",
-        "for j in range(len(texts)):\n",
-        "   filtered_data.append([texts[j]])\n",
-        "   df1=pd.DataFrame(filtered_data, columns=[\"original\"])\n",
-        "# Save the DataFrame to a CSV file\n",
-        "df1.to_csv(csv_file_path, index=False)\n",
-        "df1.shape"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -67,25 +42,34 @@
         "id": "-Ju3kITq_qMH",
         "outputId": "216c42a7-5c31-43b7-a209-77f4197a8801"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(291, 1)"
             ]
           },
+          "execution_count": 21,
           "metadata": {},
-          "execution_count": 21
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "filtered_data=[]\n",
+        "texts = df['action'].unique()\n",
+        "texts.shape\n",
+        "csv_file_path = './nlpositionality_social-acceptability_processed.csv'\n",
+        "for j in range(len(texts)):\n",
+        "   filtered_data.append([texts[j]])\n",
+        "   df1=pd.DataFrame(filtered_data, columns=[\"original\"])\n",
+        "# Save the DataFrame to a CSV file\n",
+        "df1.to_csv(csv_file_path, index=False)\n",
+        "df1.shape"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "pip install nlpaug\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,11 +77,10 @@
         "id": "SPrllIEKF2a1",
         "outputId": "ae3bc7af-c0c4-49ec-9cf0-eb9347092b9c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting nlpaug\n",
             "  Downloading nlpaug-1.1.11-py3-none-any.whl (410 kB)\n",
@@ -122,32 +105,14 @@
             "Successfully installed nlpaug-1.1.11\n"
           ]
         }
+      ],
+      "source": [
+        "pip install nlpaug\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import nlpaug.augmenter.word as naw\n",
-        "import pandas as pd\n",
-        "\n",
-        "# Assuming you have a DataFrame 'df' with a column 'original' containing your text data\n",
-        "\n",
-        "# Load your data\n",
-        "# For example:\n",
-        "df = pd.read_csv('/content/noduplicates_nlpositionality_toxicity_processed.csv')\n",
-        "\n",
-        "# Function to apply augmentation\n",
-        "def augment_text(text):\n",
-        "    aug = naw.ContextualWordEmbsAug(model_path='bert-base-uncased', action=\"insert\")\n",
-        "    augmented_text = aug.augment(text)\n",
-        "    return augmented_text\n",
-        "\n",
-        "# Apply augmentation to your data\n",
-        "df['perturbed'] = df['original'].apply(augment_text)\n",
-        "\n",
-        "# Display the original and perturbed data\n",
-        "print(df[['original', 'perturbed']])\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -155,11 +120,10 @@
         "id": "O3Qh_fetIpHq",
         "outputId": "377bb294-ecee-4a8b-9828-2e1a7b4b7dd9"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "                                              original  \\\n",
             "0    I hate the fucking immigrants as trying to tak...   \n",
@@ -190,17 +154,33 @@
             "[299 rows x 2 columns]\n"
           ]
         }
+      ],
+      "source": [
+        "import nlpaug.augmenter.word as naw\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Assuming you have a DataFrame 'df' with a column 'original' containing your text data\n",
+        "\n",
+        "# Load your data\n",
+        "# For example:\n",
+        "df = pd.read_csv('./noduplicates_nlpositionality_toxicity_processed.csv')\n",
+        "\n",
+        "# Function to apply augmentation\n",
+        "def augment_text(text):\n",
+        "    aug = naw.ContextualWordEmbsAug(model_path='bert-base-uncased', action=\"insert\")\n",
+        "    augmented_text = aug.augment(text)\n",
+        "    return augmented_text\n",
+        "\n",
+        "# Apply augmentation to your data\n",
+        "df['perturbed'] = df['original'].apply(augment_text)\n",
+        "\n",
+        "# Display the original and perturbed data\n",
+        "print(df[['original', 'perturbed']])\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df.sample()\n",
-        "df.to_csv('/content/augmented_nlpositionality_toxicity_processed.csv', index=False)\n",
-        "\n",
-        "# Confirm the file creation\n",
-        "print(\"CSV file created successfully.\")\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -208,25 +188,45 @@
         "id": "HftrEBtoKYZb",
         "outputId": "472dae2d-59f6-4544-940a-4d1cc9fd667b"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "CSV file created successfully.\n"
           ]
         }
+      ],
+      "source": [
+        "df.sample()\n",
+        "df.to_csv('./augmented/augmented_nlpositionality_toxicity_processed.csv', index=False)\n",
+        "\n",
+        "# Confirm the file creation\n",
+        "print(\"CSV file created successfully.\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "ev3yNOZnKbJ0"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
